[gd_scene load_steps=15 format=3 uid="uid://dkn4x8wm7q3hp"]

[ext_resource type="Script" uid="uid://lbto5usmhvgt" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://cokcg8oumpkf4" path="res://scripts/GameController.gd" id="2_gamecontroller"]
[ext_resource type="Shader" uid="uid://2120dnt35rkl" path="res://shaders/crt.gdshader" id="3_crt"]
[ext_resource type="PackedScene" uid="uid://bvqx4kjp8ymqc" path="res://scenes/Player.tscn" id="4_player"]
[ext_resource type="Script" uid="uid://duy3778yy6sq5" path="res://scripts/EnemySpawner.gd" id="5_spawner"]
[ext_resource type="PackedScene" uid="uid://dq8hjk2n5v7pm" path="res://scenes/Enemy.tscn" id="6_enemy"]
[ext_resource type="PackedScene" uid="uid://c3x8mj5qy2hkn" path="res://ui/HUD.tscn" id="7_hud"]
[ext_resource type="Script" uid="uid://bjgaxwcpd2om" path="res://scripts/Starfield.gd" id="8_starfield"]
[ext_resource type="PackedScene" path="res://scenes/Wingman.tscn" id="9_wingman"]
[ext_resource type="Script" uid="uid://cuhy5tkphcx7m" path="res://scripts/ViewportScaler.gd" id="10_scaler"]
[ext_resource type="Script" uid="uid://0qihi4wl1m6o" path="res://scripts/MissionDirector.gd" id="11_director"]
[ext_resource type="PackedScene" path="res://scenes/BackgroundRoot.tscn" id="12_background"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crt"]
shader = ExtResource("3_crt")
shader_parameter/barrel_distortion = 0.06
shader_parameter/vignette_intensity = 0.2
shader_parameter/scanline_intensity = 0.14
shader_parameter/scanline_count = 300.0
shader_parameter/color_depth = 16.0
shader_parameter/dither_strength = 0.02
shader_parameter/noise_intensity = 0.02
shader_parameter/brightness = 1.0
shader_parameter/gamma = 0.9
shader_parameter/saturation = 1.05
shader_parameter/contrast = 1.05
shader_parameter/internal_resolution = Vector2(400, 300)
shader_parameter/mid_boost = 1.15
shader_parameter/lift_shadows_start = 0.02
shader_parameter/lift_shadows_end = 0.25

[sub_resource type="Environment" id="Environment_space"]
background_mode = 1
background_color = Color(0.01, 0.01, 0.04, 1)
ambient_light_source = 2
ambient_light_color = Color(0.0666667, 0.0862745, 0.133333, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.25
fog_enabled = true
fog_light_color = Color(0.02, 0.02, 0.06, 1)
fog_density = 0.001
fog_depth_begin = 30.0
fog_depth_end = 200.0

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="GameController" type="Node" parent="."]
script = ExtResource("2_gamecontroller")

[node name="MissionDirector" type="Node" parent="."]
script = ExtResource("11_director")
mission_file = "res://missions/mission_convoy.json"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_crt")
grow_horizontal = 0
grow_vertical = 0
stretch = true
script = ExtResource("10_scaler")

[node name="GameViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/GameViewport"]
environment = SubResource("Environment_space")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/GameViewport"]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
light_color = Color(0.95, 0.92, 0.85, 1)
light_energy = 1.2

[node name="FillLight3D" type="DirectionalLight3D" parent="SubViewportContainer/GameViewport"]
transform = Transform3D(-0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, 0.612372, -0.612372, 0, -8, 0)
light_color = Color(0.0627451, 0.0941176, 0.133333, 1)
light_energy = 0.12

[node name="BackgroundRoot" parent="SubViewportContainer/GameViewport" instance=ExtResource("12_background")]

[node name="Player" parent="SubViewportContainer/GameViewport" instance=ExtResource("4_player")]

[node name="Wingman" parent="SubViewportContainer/GameViewport" instance=ExtResource("9_wingman")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -0.5, 2)

[node name="EnemySpawner" type="Node3D" parent="SubViewportContainer/GameViewport"]
script = ExtResource("5_spawner")
enemy_scene = ExtResource("6_enemy")

[node name="Starfield" type="Node3D" parent="SubViewportContainer/GameViewport"]
script = ExtResource("8_starfield")

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="HUD" parent="HUDLayer" instance=ExtResource("7_hud")]
